force-app/main/default/objects/Commission_earned__c/Commission_earned__c.object-meta.xml
<CustomObject>
    <label>Commission Earned</label>
    <nameField>
        <displayFormat>COM-{00000}</displayFormat>
        <label>Commissions earned Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions Earned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>