force-app/main/default/objects/Commission_earned__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>commissions_earned</relationshipName>
    <type>Lookup</type>
</CustomField>