force-app/main/default/objects/Commission_earned__c/fields/commission_percentage__c.field-meta.xml
<CustomField>
    <fullName>commission_percentage__c</fullName>
    <label>commission percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>