force-app/main/default/objects/Commission_earned__c/fields/Gst__c.field-meta.xml
<CustomField>
    <fullName>Gst__c</fullName>
    <label>Gst %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>