force-app/main/default/objects/Commission_earned__c/fields/Tds__c.field-meta.xml
<CustomField>
    <fullName>Tds__c</fullName>
    <label>Tds</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>