force-app/main/default/objects/Commission_earned__c/fields/TDS_Amount__c.field-meta.xml
<CustomField>
    <fullName>TDS_Amount__c</fullName>
    <formula>Tds__c * Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>